--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>CuteGroup</groupId>
   <artifactId>0000</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>0000</name>
   <url>http://maven.apache.org</url>
@@ -22,4 +22,8 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <modules>
+  	<module>CPClient</module>
+  	<module>CPServer</module>
+  </modules>
 </project>
