--- a/CPServer/pom.xml
+++ b/CPServer/pom.xml
@@ -6,4 +6,14 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>CPServer</artifactId>
+  
+  
+  <dependencies>
+  		<dependency>
+  			<groupId>CuteGroup</groupId>
+   			<artifactId>CPCommon</artifactId>
+    		<version>0.0.1-SNAPSHOT</version>
+  		</dependency>
+  </dependencies>
+  
 </project>
