--- a/CPClient/pom.xml
+++ b/CPClient/pom.xml
@@ -13,5 +13,10 @@
    			<artifactId>CPCommon</artifactId>
     		<version>0.0.1-SNAPSHOT</version>
   		</dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.12</version>
+      </dependency>
   </dependencies>
 </project>
