--- a/CPServer/pom.xml
+++ b/CPServer/pom.xml
@@ -84,6 +84,11 @@
     	<artifactId>hibernate-entitymanager</artifactId>
     	<version>5.2.5.Final</version>
     </dependency>
+	  <dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-core</artifactId>
+		  <version>5.2.5.Final</version>
+	  </dependency>
   </dependencies>
   
 </project>
