--- a/CPClient/.classpath
+++ b/CPClient/.classpath
@@ -25,5 +25,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/Users/julia98/Downloads/controlsfx-8/controlsfx-8.40.14.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
