--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/Users/julia98/Downloads/jfoenix.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
