--- a/CPClient/pom.xml
+++ b/CPClient/pom.xml
@@ -8,6 +8,11 @@
   <artifactId>CPClient</artifactId>
   
   <dependencies>
+  <dependency>
+    <groupId>com.jfoenix</groupId>
+    <artifactId>jfoenix</artifactId>
+    <version>1.10.0</version>
+</dependency>
   		<dependency>
   			<groupId>CuteGroup</groupId>
    			<artifactId>CPCommon</artifactId>
