--- a/CPCommon/pom.xml
+++ b/CPCommon/pom.xml
@@ -6,6 +6,11 @@
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <version>1.0.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.5.Final</version>
+        </dependency>
     </dependencies>
     <parent>
     <groupId>CuteGroup</groupId>
